# geometric_algebra_class

./: Afun.cpp  Afun.h  CMakeLists.txt  EQ.cpp  EQ.h  README.md  data.cpp  data.h  main.cpp  numAlgo.cpp  numAlgo.h
